--- a/MyAlbum/MyAlbum/Base.lproj/Main.storyboard
+++ b/MyAlbum/MyAlbum/Base.lproj/Main.storyboard
@@ -14,14 +14,14 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="AddPhotoController" customModule="MyAlbum" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7Zm-kk-4uP">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sBE-dj-QkW">
-                                <rect key="frame" x="0.0" y="802" width="414" height="60"/>
+                                <rect key="frame" x="0.0" y="733" width="414" height="60"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xeA-43-RiW">
                                         <rect key="frame" x="87" y="0.0" width="60" height="60"/>
@@ -61,7 +61,7 @@
                                 </constraints>
                             </view>
                             <visualEffectView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z1A-5q-UHb">
-                                <rect key="frame" x="122" y="54" width="170" height="37"/>
+                                <rect key="frame" x="122" y="66" width="170" height="37"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ft0-hU-ci6">
                                     <rect key="frame" x="0.0" y="0.0" width="170" height="37"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -87,35 +87,59 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </visualEffectView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dZx-GC-YDU">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                                <items>
+                                    <navigationItem id="dTd-12-GJk">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="Ocr-YN-yQW">
+                                            <connections>
+                                                <segue destination="IoX-XT-JQH" kind="unwind" unwindAction="unwindWithCancelWithUnwindSegue:" id="PRh-Yo-a0x"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="H5Y-fh-Zk8">
+                                            <connections>
+                                                <segue destination="IoX-XT-JQH" kind="unwind" unwindAction="unwindWithConfirmWithUnwindSegue:" id="JXy-4s-ArM"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="dZx-GC-YDU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ApU-bZ-JpU"/>
+                            <constraint firstItem="dZx-GC-YDU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Ia4-gJ-uxd"/>
+                            <constraint firstItem="dZx-GC-YDU" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="J6q-7r-u3n"/>
                             <constraint firstItem="7Zm-kk-4uP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="NdH-oO-aZZ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7Zm-kk-4uP" secondAttribute="trailing" id="Oth-UT-DSR"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="sBE-dj-QkW" secondAttribute="bottom" id="Tae-gm-7x7"/>
                             <constraint firstItem="Z1A-5q-UHb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Xx3-74-Zu8"/>
                             <constraint firstItem="7Zm-kk-4uP" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="aT6-gt-HUU"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sBE-dj-QkW" secondAttribute="trailing" id="ivb-Fx-w5y"/>
+                            <constraint firstItem="Z1A-5q-UHb" firstAttribute="top" secondItem="dZx-GC-YDU" secondAttribute="bottom" constant="10" id="pAA-vn-Not"/>
                             <constraint firstItem="sBE-dj-QkW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tAB-qb-5Y2"/>
-                            <constraint firstItem="Z1A-5q-UHb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="y17-d5-v7C"/>
                             <constraint firstAttribute="bottom" secondItem="7Zm-kk-4uP" secondAttribute="bottom" id="z34-T1-mJl"/>
                         </constraints>
                     </view>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="cameraButton" destination="wrK-sw-yNK" id="PYs-cA-SsM"/>
                         <outlet property="imageView" destination="7Zm-kk-4uP" id="vNq-nd-Gf5"/>
                         <outlet property="photoLibraryButton" destination="xeA-43-RiW" id="POQ-Xo-mtX"/>
-                        <outlet property="resultsConstraint" destination="y17-d5-v7C" id="D9W-hC-yaJ"/>
+                        <outlet property="resultsConstraint" destination="pAA-vn-Not" id="9J4-OU-vkK"/>
                         <outlet property="resultsLabel" destination="jwR-OI-BEF" id="fZF-io-mMb"/>
                         <outlet property="resultsView" destination="ft0-hU-ci6" id="hko-0F-rmg"/>
+                        <outlet property="saveButton" destination="H5Y-fh-Zk8" id="X6t-Ex-O2B"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <exit id="IoX-XT-JQH" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="40.579710144927539" y="104.46428571428571"/>
+            <point key="canvasLocation" x="2613" y="123"/>
         </scene>
-        <!--Table Controller-->
+        <!--All Photos-->
         <scene sceneID="tlf-p6-Fhg">
             <objects>
                 <tableViewController id="Scz-t5-QlR" customClass="TableController" customModule="MyAlbum" customModuleProvider="target" sceneMemberID="viewController">
@@ -124,7 +148,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="gray" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="GOH-qa-bSg" detailTextLabel="kdW-Gb-lfS" style="IBUITableViewCellStyleValue1" id="XBF-nW-Q8b">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="gray" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="TagCell" textLabel="GOH-qa-bSg" detailTextLabel="kdW-Gb-lfS" style="IBUITableViewCellStyleValue1" id="XBF-nW-Q8b">
                                 <rect key="frame" x="20" y="49.5" width="374" height="47.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XBF-nW-Q8b" id="Aob-eS-3eO">
@@ -154,7 +178,17 @@
                             <outlet property="delegate" destination="Scz-t5-QlR" id="zXm-4W-YEj"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="aVj-if-K8E"/>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="All Photos" id="aVj-if-K8E">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="E3x-73-N96">
+                            <connections>
+                                <segue destination="BYZ-38-t0r" kind="popoverPresentation" popoverAnchorBarButtonItem="E3x-73-N96" id="WjS-MD-T7a">
+                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                </segue>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pkY-Mh-rHD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
